--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="css/the-big-picture.css" rel="stylesheet">
-
+ 
 </head>
 
 <body>
@@ -26,6 +21,10 @@
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
+     <li data-target="#myCarousel" data-slide-to="3"></li>
+     <li data-target="#myCarousel" data-slide-to="4"></li>
+     <li data-target="#myCarousel" data-slide-to="5"></li>
+     <li data-target="#myCarousel" data-slide-to="6"></li>
   </ol>
 
   <!-- Wrapper for slides -->
@@ -40,6 +39,18 @@
 
     <div class="item">
       <img src="3.jpg">
+    </div>
+     <div class="item">
+      <img src="4.JPG">
+    </div>
+     <div class="item">
+      <img src="5.JPG">
+    </div>
+     <div class="item">
+      <img src="6.jpg">
+    </div>
+     <div class="item">
+      <img src="7.jpg">
     </div>
   </div>
 
