--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
       <img src="c.jpg">
     </div>
      <div class="item">
-      <img src="d.JPG">
+      <img src="d.jpg">
     </div>
      <div class="item">
-      <img src="e.JPG">
+      <img src="e.jpg">
     </div>
     
      
