--- a/About.html
+++ b/About.html
@@ -44,24 +44,24 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="index.html" href="#">Home
+           <a class="nav-link" href="index.html">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="About.html" href="#">About</a>
+          <a class="nav-link" href="About.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Writing</a>
+            <a class="nav-link" href="Writing.html">Writing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Research</a>
+            <a class="nav-link" href="Research.html">Research</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Curriculum Vitae</a>
+            <a class="nav-link" href="CV.html">Curriculum Vitae</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="Contact.html">Contact</a>
           </li>
         </ul>
       </div>
