--- a/About.html
+++ b/About.html
@@ -32,7 +32,8 @@
     </div>
   </section>
   
-  <img src="aa.jpg">
+  <img src="aa.jpg"
+  style="width:1280px;height:1920px;450px;">
 
   <!-- Page Content -->
   
