--- a/About.html
+++ b/About.html
@@ -33,7 +33,7 @@
   </section>
   
   <img src="aa.jpg"
-  style="width:600px;height:800px;450px;">
+  style="float:right;width:600px;height:800px;450px;">
 
   <!-- Page Content -->
   
