--- a/About.html
+++ b/About.html
@@ -31,7 +31,7 @@
   </section>
   
   <img src="aa.jpg"
-  style="float:center;width:600px;height:800px;450px;">
+  style="float:right;width:600px;height:800px;450px;">
 
   <!-- Page Content -->
   
