--- a/About.html
+++ b/About.html
@@ -13,6 +13,12 @@
    <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+    .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 
   </head>
 
@@ -30,8 +36,7 @@
     </div>
   </section>
   
-  <img src="aa.jpg"
-  style="float:right;width:600px;height:800px;450px;">
+  <img src="aa.jpg" class="center">
 
   <!-- Page Content -->
   
