--- a/About.html
+++ b/About.html
@@ -13,12 +13,13 @@
    <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    .center {
+<style>
+img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
 }
+</style>
 
   </head>
 
@@ -36,7 +37,8 @@
     </div>
   </section>
   
-  <img src="aa.jpg" class="center">
+  <img src="aa.jpg" 
+       style="width:50%;">
 
   <!-- Page Content -->
   
