--- a/About.html
+++ b/About.html
@@ -38,7 +38,7 @@ img {
   </section>
   
   <img src="aa.jpg" 
-       style="width:50%;">
+       style="width:50%; height:50%">
 
   <!-- Page Content -->
   
