--- a/About.html
+++ b/About.html
@@ -37,8 +37,7 @@ img {
     </div>
   </section>
   
-  <img src="aa.jpg" 
-       style="width:50%;height:40%;">
+  <img src="aa.jpg" style="width:50%;height:40%;">
 
   <!-- Page Content -->
   
