--- a/About.html
+++ b/About.html
@@ -20,6 +20,18 @@ img {
   margin-right: auto;
 }
 </style>
+    
+    <style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
+.navbar a {
+  font-size: 14px;
+ }
+
+    </style>
+
 
   </head>
 
