--- a/About.html
+++ b/About.html
@@ -18,6 +18,8 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  height: 800px;
+  width: 600px;
 }
 </style>
     
@@ -51,7 +53,7 @@ body {
     </div>
   </section>
   
-  <img src="aa.jpg" style="width:40%;height:25%;">
+  <img src="aa.jpg" style="100%;">
 
   <!-- Page Content -->
   
