--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
 <head>
   <head>
   <title>Bootstrap Example</title>
-  <meta charset="utf-8">
+  <meta charset="utf-8", font-size: 14px;>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
