--- a/About.html
+++ b/About.html
@@ -18,6 +18,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  size: 50%;
 }
 </style>
     
@@ -51,7 +52,7 @@ body {
     </div>
   </section>
   
-  <img src="aa.jpg" style="50%;">
+  <img src="aa.jpg">
 
   <!-- Page Content -->
   
