--- a/About.html
+++ b/About.html
@@ -13,15 +13,7 @@
    <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-<style>
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  size: 50%;
-}
-</style>
-    
+
     <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -52,7 +44,7 @@ body {
     </div>
   </section>
   
-  <img src="aa.jpg">
+  <img src="aa.jpg"; style= 50%>
 
   <!-- Page Content -->
   
