--- a/About.html
+++ b/About.html
@@ -44,7 +44,7 @@ body {
     </div>
   </section>
   
-  <img src="aa.jpg"; style= 50%>
+  <img src="aa.jpg" width: "600" height= "800">
 
   <!-- Page Content -->
   
