--- a/About.html
+++ b/About.html
@@ -27,7 +27,14 @@ body {
 }
     </style>
 
-
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
+    
   </head>
 
 
