--- a/About.html
+++ b/About.html
@@ -27,14 +27,6 @@ body {
 }
     </style>
 
-<style>
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom:auto;
-}
-</style>
     
   </head>
 
@@ -52,7 +44,7 @@ img {
     </div>
   </section>
   
-  <img src="aa.jpg" width: "600" height= "800">
+  <img src="aa.jpg" width: "600" height= "800" float:"right">
 
   <!-- Page Content -->
   
