--- a/About.html
+++ b/About.html
@@ -28,6 +28,14 @@ body {
     </style>
 
     
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom:auto;
+}
+</style>
   </head>
 
 
