--- a/About.html
+++ b/About.html
@@ -31,7 +31,9 @@ body {
 <style>
 img {
   display: block;
-  float: right;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom:auto;
   
 }
 </style>
@@ -51,7 +53,7 @@ img {
     </div>
   </section>
   
-  <img src="aa.jpg" width: "600" height= "800" float:"right">
+  <img src="aa.jpg" width: "600" height= "800" align:"right">
 
   <!-- Page Content -->
   
