--- a/About.html
+++ b/About.html
@@ -53,7 +53,7 @@ img {
     </div>
   </section>
   
-  <img src="aa.jpg" width: "600" height= "800" align:"right">
+  <img src="aa.jpg" width: "600" height= "800" align:"center-right">
 
   <!-- Page Content -->
   
