--- a/About.html
+++ b/About.html
@@ -33,7 +33,8 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom:auto;
+  margin-bottom: auto;
+  margin-top: auto;
   
 }
 </style>
