--- a/About.html
+++ b/About.html
@@ -54,7 +54,7 @@ img {
     </div>
   </section>
   
-  <img src="aa.jpg" width: "600" height= "800" align:"center-right">
+  <img src="aa.jpg" width: "600" height= "800" align:"float:right">
 
   <!-- Page Content -->
   
