--- a/About.html
+++ b/About.html
@@ -54,7 +54,7 @@ img {
     </div>
   </section>
   
-  <img src="aa.jpg" ; float:"right">
+  <img src="aa.jpg" width: "500" height "700"; float:"right">
 
   <!-- Page Content -->
   
