--- a/About.html
+++ b/About.html
@@ -47,16 +47,19 @@ body {
   background-color: #ddd;
   color: black;
 }
+      
+.img a {
+  display: block;
+  float:right; 
+  width: 500;
+  height: 700; 
+      }
     </style>
 
     
 <style>
 img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: auto;
-  margin-top: auto;
+  
   
 }
 </style>
