--- a/About.html
+++ b/About.html
@@ -51,8 +51,8 @@ body {
 .img a {
   display: block;
   float:right; 
-  width: 500;
-  height: 700; 
+  width: 500px;
+  height: 700px; 
       }
     </style>
 
