--- a/About.html
+++ b/About.html
@@ -50,6 +50,8 @@ body {
       
 .img a {
   display: block;
+  margin-left: auto;
+  margin-right: auto;
   float: right; 
   width: 500px;
   height: 700px; 
