--- a/About.html
+++ b/About.html
@@ -55,6 +55,7 @@ body {
   float: right; 
   width: 500px;
   height: 700px; 
+  size: 50%;
       }
     </style>
 
@@ -81,7 +82,7 @@ img {
     </div>
   </section>
   
-  <img src="aa.jpg" width: "500" height: "700"; float:"right">
+  <img src="aa.jpg">
 
   <!-- Page Content -->
   
