--- a/About.html
+++ b/About.html
@@ -48,6 +48,16 @@ body {
   color: black;
 }
       
+.img a {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  align: right; 
+  width: 500px;
+  height: 700px; 
+  size: 50%;
+      }
+    </style>
 
 
 </style>
