--- a/About.html
+++ b/About.html
@@ -48,18 +48,6 @@ body {
   color: black;
 }
       
-.img a {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  align: right; 
-  width: 500px;
-  height: 700px; 
-  size: 50%;
-      }
-    </style>
-
-
 </style>
   </head>
 
@@ -77,7 +65,7 @@ body {
     </div>
   </section>
   
-  <img src="aa.jpg">
+  <img src="aa.jpg" alt: "boblo" width: "400" height: "600" style="float:right">>
 
   <!-- Page Content -->
   
