--- a/About1.html
+++ b/About1.html
@@ -57,6 +57,7 @@ body {
   <h1>About</h1>
   <p>I am an environmental historian of North America. My interest in Great Lakes borderlands came via a graduate degree in urban design for which I first moved to Michigan. In the years since, I have continued to live in and research borderlands. I am braodly interested in how infrastucture creation reveals the myriad social and political tensions that undergird our understanding of borders and nations. My writing on these subjects have appeared in publications from <i>Contingent Magazine</i> to <i>Water History.</i></p>
 </div>
+ <img src="aa.jpg" alt: "boblo" width: "400" height: "600" style="float:right">
 
 <div class="navbar">
   <a href="#">Ramya Swayamprakash</a>
