--- a/About1.html
+++ b/About1.html
@@ -27,6 +27,9 @@ body {
 .navbar {
   overflow: hidden;
   background-color: #333;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 /* Style the navigation bar links */
