--- a/About1.html
+++ b/About1.html
@@ -18,40 +18,6 @@ body {
   color: black;
 }
 
-/* Increase the font size of the h1 element */
-.header h1 {
-  font-size: 42px;
-}
-
-/* Style the top navigation bar */
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-/* Style the navigation bar links */
-.navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
-}
-
-/* Right-aligned link */
-.navbar a.right {
-  float: right;
-}
-
-/* Change color on hover */
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
 </style>
 </head>
 <body>
@@ -60,7 +26,7 @@ body {
   <h1>About</h1>
   <p>I am an environmental historian of North America. My interest in Great Lakes borderlands came via a graduate degree in urban design for which I first moved to Michigan. In the years since, I have continued to live in and research borderlands. I am braodly interested in how infrastucture creation reveals the myriad social and political tensions that undergird our understanding of borders and nations. My writing on these subjects have appeared in publications from <i>Contingent Magazine</i> to <i>Water History.</i></p>
 </div>
- <img src="aa.jpg" alt: "boblo" width: "400" height: "600" style="float:right">
+ <img src="aa.jpg" alt: "boblo" width: "400" height: "600" style="align:right">
 
 <div class="navbar">
   <a href="#">Ramya Swayamprakash</a>
