--- a/About.html
+++ b/About.html
@@ -65,7 +65,10 @@ body {
     </div>
   </section>
   
-  <img src="aa.jpg" alt: "boblo" width: "400" height: "600" style="float:right">>
+  <a target="_blank" href="img_aa.jpg">
+  <img src="img_aa.jpg" alt="Boblo" style="width:150px">
+</a>
+ 
 
   <!-- Page Content -->
   
