--- a/About.html
+++ b/About.html
@@ -25,29 +25,23 @@ body {
 .navbar {
   overflow: hidden;
   background-color: #333;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
-/* Style the navigation bar links */
-.navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
+img {
+  border: 1px solid #ddd; /* Gray border */
+  border-radius: 4px;  /* Rounded border */
+  padding: 5px; /* Some padding */
+  width: 150px; /* Set a small width */
 }
 
-/* Right-aligned link */
-.navbar a.right {
-  float: right;
+/* Add a hover effect (blue shadow) */
+img:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
 
-/* Change color on hover */
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-      
 </style>
   </head>
 
