--- a/About1.html
+++ b/About1.html
@@ -18,7 +18,20 @@ body {
   color: black;
 }
   
- 
+ /* Increase the font size of the h1 element */
+.header h1 {
+  font-size: 42px;
+}
+
+/* Style the top navigation bar */
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+  
 img {
   border: 1px solid #ddd; /* Gray border */
   border-radius: 4px;  /* Rounded border */
