--- a/About.html
+++ b/About.html
@@ -59,8 +59,8 @@ img:hover {
     </div>
   </section>
   
-  <a target="_blank" href="img_aa.jpg">
-  <img src="img_aa.jpg" alt="Boblo" style="width:150px">
+  <a target="_blank" href="aa.jpg">
+  <img src="aa.jpg" alt="Boblo" style="width:150px">
 </a>
  
 
