--- a/About.html
+++ b/About.html
@@ -35,6 +35,7 @@ img {
   border-radius: 4px;  /* Rounded border */
   padding: 5px; /* Some padding */
   width: 150px; /* Set a small width */
+  float: right;
 }
 
 /* Add a hover effect (blue shadow) */
