--- a/About.html
+++ b/About.html
@@ -34,8 +34,8 @@ img {
   border: 1px solid #ddd; /* Gray border */
   border-radius: 4px;  /* Rounded border */
   padding: 5px; /* Some padding */
-  width: 150px; /* Set a small width */
-  float: right;
+  width: 300px; /* Set a small width */
+  float: center;
 }
 
 /* Add a hover effect (blue shadow) */
@@ -61,7 +61,7 @@ img:hover {
   </section>
   
   <a target="_blank" href="aa.jpg">
-  <img src="aa.jpg" alt="Boblo" style="width:150px">
+  <img src="aa.jpg" alt="Boblo" style="width:300px">
 </a>
  
 
