--- a/About.html
+++ b/About.html
@@ -43,6 +43,11 @@ img:hover {
   box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 </style>
   </head>
 
@@ -61,7 +66,7 @@ img:hover {
   </section>
   
   <a target="_blank" href="aa.jpg">
-  <img src="aa.jpg" alt="Boblo" style="width:300px">
+  <img src="aa.jpg" alt="Boblo" style="width:300px" class="center">
 </a>
  
 
