--- a/About.html
+++ b/About.html
@@ -30,6 +30,28 @@ body {
   width: 100%;
 }
 
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background: #f1f1f1;
+  color: black;
+}
+
+.navbar a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+
+
 img {
   border: 1px solid #ddd; /* Gray border */
   border-radius: 4px;  /* Rounded border */
@@ -73,13 +95,13 @@ img:hover {
   <!-- Page Content -->
   
   <div class="navbar">
-  <a href="#">Ramya Swayamprakash</a>
-  <a href="#">Home</a>
-  <a href="#">About</a>
-  <a href="#">Writing</a>
-  <a href="#">Research</a>
-  <a href="#">Curriculum Vitae</a>
-  <a href="#">Contact</a>
+  <a href="#Home">Ramya Swayamprakash</a>
+  <a href="#Home">Home</a>
+  <a href="#About">About</a>
+  <a href="#Writing">Writing</a>
+  <a href="#Research">Research</a>
+  <a href="#CV">Curriculum Vitae</a>
+  <a href="#Contact">Contact</a>
 </div>
 
 
