--- a/About.html
+++ b/About.html
@@ -2,23 +2,13 @@
 <html lang="en">
 
 <head>
-  <head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8", font-size: 16px;>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-
-    <style>
+     <style>
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  ont-family: Arial, Helvetica, sans-serif;
   margin: 0;
  }
+      
 .header h1 {
   font-size: 42px;
 }
