--- a/About.html
+++ b/About.html
@@ -121,7 +121,7 @@ img:hover {
   <div class="navbar">
   <a href="#Home">Ramya Swayamprakash</a>
   <a href="#Home">Home</a>
-  <a href="#About.html">About</a>
+  <a href="About.html">About</a>
   <a href="#Writing">Writing</a>
   <a href="#Research">Research</a>
   <a href="#CV">Curriculum Vitae</a>
