--- a/Writing.html
+++ b/Writing.html
@@ -91,11 +91,7 @@ img:hover {
   box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
 
-.right{
-  display: block;
-  margin-left: auto;
- 
-}
+
   div.b {
   word-wrap: break-word;
 } 
@@ -118,7 +114,7 @@ img:hover {
     </div>
   
    <a target="_blank" href="Writing1.jpg">
-  <img src="Writing1.jpg" alt="Boblo" style="width:500px" class="right">
+  <img src="Writing1.jpg" alt="Boblo" style="float:right; width:500px">
 </a>
   
   
