--- a/About.html
+++ b/About.html
@@ -42,7 +42,9 @@ body, html {
   width: 80%;
   height: 80%;
   padding: 20px;
-  text-align: center;
+  text-align: left;
+  word-wrap: break-word;
+} 
 }
   
   .navbar {
