--- a/About.html
+++ b/About.html
@@ -34,7 +34,7 @@ body, html {
   color: grey;
   font-weight: regular;
   border: 3px solid #f1f1f1;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -85,7 +85,7 @@ img {
   border-radius: 4px;  /* Rounded border */
   padding: 5px; /* Some padding */
   width: 300px; /* Set a small width */
-  float: top-right;
+  float: right;
 }
 
 /* Add a hover effect (blue shadow) */
