--- a/About.html
+++ b/About.html
@@ -93,7 +93,11 @@ img:hover {
   box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
 
-
+.right{
+  display: block;
+  margin-left: auto;
+  top-padding:0; 
+}
 </style>
 </head>
 <body>
