--- a/About.html
+++ b/About.html
@@ -34,7 +34,7 @@ body, html {
   color: grey;
   font-weight: regular;
   border: 3px solid #f1f1f1;
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
