--- a/About.html
+++ b/About.html
@@ -42,7 +42,7 @@ body, html {
   width: 80%;
   height: 80%;
   padding: 20px;
-  text-align: left;
+  text-align: inline-left;
   overflow: scroll;
   word-wrap: break-word;
 }
