--- a/Aboot.html
+++ b/Aboot.html
@@ -103,12 +103,7 @@ img:hover {
 <div class="bg-text">
   <h1 style="font-size:50px">About</h1>
   <p><a target="_blank" href="aa.jpg"><img src="aa.jpg" alt="Boblo" style="width:300px;margin-left:15px;"></a>
-  I am an environmental historian of North America. My interest in Great Lakes borderlands came via a graduate degree in urban design for which I first moved to Michigan. In the years since, I have continued to live in and research borderlands. I am broadly interested in how infrastucture creation reveals the myriad social and political tensions that undergird our understanding of borders and nations. My writing on these subjects have appeared in publications from <i>Contingent Magazine</i> to <i>Water History</i> as well as websites such as the <i>Network in Canadian History & Environment</i>
-  
-  I am an environmental historian of North America. My interest in Great Lakes borderlands came via a graduate degree in urban design for which I first moved to Michigan. In the years since, I have continued to live in and research borderlands. I am broadly interested in how infrastucture creation reveals the myriad social and political tensions that undergird our understanding of borders and nations. My writing on these subjects have appeared in publications from <i>Contingent Magazine</i> to <i>Water History</i> as well as websites such as the <i>Network in Canadian History & Environment</i>I am an environmental historian of North America. My interest in Great Lakes borderlands came via a graduate degree in urban design for which I first moved to Michigan. In the years since, I have continued to live in and research borderlands. I am broadly interested in how infrastucture creation reveals the myriad social and political tensions that undergird our understanding of borders and nations. My writing on these subjects have appeared in publications from <i>Contingent Magazine</i> to <i>Water History</i> as well as websites such as the <i>Network in Canadian History & Environment</i> </p>
-
- 
- 
+  I am an environmental historian of North America. My interest in Great Lakes borderlands came via a graduate degree in urban design for which I first moved to Michigan. In the years since, I have continued to live in and research borderlands. I am broadly interested in how infrastucture creation reveals the myriad social and political tensions that undergird our understanding of borders and nations. My writing on these subjects have appeared in publications from <i>Contingent Magazine</i> to <i>Water History</i> as well as websites such as the <i>Network in Canadian History & Environment</i> </p>
   </div>
 
 
