--- a/CV.html
+++ b/CV.html
@@ -105,24 +105,24 @@ img:hover {
 <p><a target="_blank" href="Writing.jpg"><img src="Writing2.jpg" alt="Boblo" style="width:500px;margin-left:15px;"></a>
 <p><strong>Education</strong></p>
 
-<p>Michigan State University, Department of History></p>
+  <p><i>Michigan State University, Department of History></i></p>
   <p>	Doctoral Student, 2016- present. <i>	Advanced to candidacy: February 2019 </i></p>
   
-  <p>Lawrence Technological University, Southfield MI</p>
+  <p><i>Lawrence Technological University, Southfield MI</i></p>
   <p>Master of Urban Design with Distinction, 2016</p>
   
-  <p>Jawaharlal Nehru University, New Delhi, India</p>
+  <p><i>Jawaharlal Nehru University, New Delhi, India</i></p>
   <p>Master of Philosophy, Center for Studies in Science Policy, 2012</p>
   <p>Master of Arts, Center for Political Studies, 2008 </p>
 
-<p>University of Mumbai, India,/p>
+  <p><i>University of Mumbai, India,</i></p>
   <p>Bachelor of Mass Media (specialization: Journalism), Wilson College, 2005</p>
   
   <p><strong>Other Training</strong></p>
-  <p><strong>Humanities Intensive Leaning and Teaching (HILT)</strong>, a Digital Humanities Summer School at the University
+  <p><i>Humanities Intensive Leaning and Teaching (HILT)</i>, a Digital Humanities Summer School at the University
     of Pennsylvania, Digital Methods for Interdisciplinary Cultural Studies, 2018</p>
   
-  <p><strong>Indian Law Institute</strong>,Post Graduate Diploma in Environmental Law, 2008</p>
+  <p><i>Indian Law Institute</i>,Post Graduate Diploma in Environmental Law, 2008</p>
   
   <p><strong>Publications</strong></p>
   <p><i>In Press</i></p>
@@ -207,7 +207,7 @@ img:hover {
   <p><i>Lawrence Technological University</i></p>
   <p>Tutor: English and Writing. Academic Achievement Center, Fall 2015 and Spring 2016</p>
   
-  <p><i>University of Mumbai, Wilson College<i></p>
+  <p><i>University of Mumbai, Wilson College</i></p>
     <p>Visiting Adjunct Faculty: Political Concepts and the Indian Political System, Spring 2014</p>
 
 
