--- a/CV.html
+++ b/CV.html
@@ -105,7 +105,7 @@ img:hover {
 <p><a target="_blank" href="Writing.jpg"><img src="Writing2.jpg" alt="Boblo" style="width:500px;margin-left:15px;"></a>
 <p><strong>Education</strong></p>
 
-  <p><i>Michigan State University, Department of History></i></p>
+  <p><i>Michigan State University, Department of History</i></p>
   <p>	Doctoral Student, 2016- present. <i>	Advanced to candidacy: February 2019 </i></p>
   
   <p><i>Lawrence Technological University, Southfield MI</i></p>
