--- a/CV.html
+++ b/CV.html
@@ -229,14 +229,15 @@ img:hover {
 
   <!-- Page Content -->
   
-  <div class="navbar">
-  <a href="#Home">Ramya Swayamprakash</a>
-  <a href="#Home">Home</a>
+   <div class="navbar">
+  <a href="Home.html">Ramya Swayamprakash</a>
+  <a href="Home.html">Home</a>
   <a href="About.html">About</a>
-  <a href="#Writing">Writing</a>
-  <a href="#Research">Research</a>
-  <a href="#CV">Curriculum Vitae</a>
-  <a href="#Contact">Contact</a>
+  <a href="Writing.html">Writing</a>
+  <a href="Research.html">Research</a>
+  <a href="DH.html">Digital Humanities</a>  
+  <a href="CV.html">Curriculum Vitae</a>
+  <a href="Contact">Contact</a>
 </div>
 </body>
 </html>
