--- a/Home.html
+++ b/Home.html
@@ -39,6 +39,7 @@ img {vertical-align: middle;}
 /* Slideshow container */
 .slideshow-container {
   max-width: 100%;
+  max-height: 80%;
   position: relative;
   margin: auto;
 }
