--- a/Home.html
+++ b/Home.html
@@ -39,7 +39,7 @@ img {vertical-align: middle;}
 /* Slideshow container */
 .slideshow-container {
   max-width: 100%;
-  max-height: 70%;
+  max-height: 600px;
   position: relative;
   margin: auto;
 }
