--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,7 @@ img {vertical-align: middle;}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 100%;
+  max-width: 1200px;
   max-height: 600px;
   position: relative;
   margin: auto;
