--- a/riverborders.html
+++ b/riverborders.html
@@ -70,7 +70,7 @@
 	mapboxgl.accessToken = 'pk.eyJ1IjoicmFteXNhdCIsImEiOiJjaXU5dHF5bzkwMDgwMnlxbXBqN2gyZHFxIn0.a1OCCJrEbzxQ4cJjtqRrew';
 	    var map = new mapboxgl.Map({
       container: 'map',
-		    style: 'mapbox://styles/ramysat/ck9appqby22gh1iplmukywmk2', 
+		    style: 'ramysat.ck8af4vkn09702rp4oqhu65xl-040kl', 
 		    center: [-82.9743, 42.3433],
       zoom: 10.7,
 		     attributionControl: false
