--- a/riverborders.html
+++ b/riverborders.html
@@ -11,7 +11,8 @@
         margin: 0;
         padding: 0;
       }
-
+body {font-family: Verdana, sans-serif; margin:0}
+	    
       #map {
         position: absolute;
         top: 0;
