--- a/riverborders.html
+++ b/riverborders.html
@@ -11,8 +11,12 @@
         margin: 0;
         padding: 0;
       }
-body {font-family: Verdana, sans-serif; margin:0}
-	    
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
       #map {
         position: absolute;
         top: 0;
