--- a/DH.html
+++ b/DH.html
@@ -141,11 +141,11 @@ body, html {
 <p>Online and Digital Pedagogical Development</p>
 
 
-<iframe src="https://ramyasat.github.io/ramyaswayamprakash/riverborders.html" name="iframe_a" height="300px" width="100%" title="Iframe Example"></iframe>
+<iframe src="https://ramyasat.github.io/ramyaswayamprakash/riverborders.html" name="iframe_a" height="300px" width="100%" title="River Borders"></iframe>
 
 <p><a href="https://ramyasat.github.io/ramyaswayamprakash/riverborders.html" target="iframe_a">River Borders</a></p>
 
-<p>As a CHI senior fellow, I created an interactive map of the world’s river borders. It is a database of river borders across the world. By aggregating all the river borders in the world, it attempts to show how rivers have made historical bordering allies. Being able to look at all the river borders in the world also gives the viewer a sense of the sheer number of border rivers as well as their locations. However, the individual river markers are meant to remain true to the particularities of a border river because after all, all borders and all river borders are particular.The map is meant to be a teaching tool.</p>
+<p>As a CHI senior fellow, I created an interactive <a href="https://ramyasat.github.io/ramyaswayamprakash/riverborders.html">map</a> of the world’s river borders. It is a database of river borders across the world. By aggregating all the river borders in the world, it attempts to show how rivers have made historical bordering allies. Being able to look at all the river borders in the world also gives the viewer a sense of the sheer number of border rivers as well as their locations. However, the individual river markers are meant to remain true to the particularities of a border river because after all, all borders and all river borders are particular.The map is meant to be a teaching tool.</p>
 
 <p>Some of the markers also highlight triple frontiers i.e. confluences of rivers that act as border demarcations for three countries. The most famous one is perhaps the Triple Frontier between Argentina, Paraguay, and Brazil, where the Parana and Iguazu Rivers meet.Some of these labels have more information about the rivers themselves. There are about a dozen or so rivers: The Amazon; the Rhine; the Volga; Nile; Danube; Inn; Bug; Mura; Senegal; Makona; Zambezi; Congo; Niger; Rio Grande; Colorado; Indus; Mekong; Salween; the Detroit River.</>
 
