--- a/DH.html
+++ b/DH.html
@@ -143,7 +143,7 @@ body, html {
 
 <iframe src="https://ramyasat.github.io/ramyaswayamprakash/riverborders.html" name="iframe_a" height="300px" width="100%" title="River Borders"></iframe>
 
-<p><a href="https://ramyasat.github.io/ramyaswayamprakash/riverborders.html" target="iframe_a">River Borders</a></p>
+<p><a href="https://ramyasat.github.io/ramyaswayamprakash/riverborders.html">River Borders</a></p>
 
 <p>As a CHI senior fellow, I created an interactive <a href="https://ramyasat.github.io/ramyaswayamprakash/riverborders.html">map</a> of the world’s river borders. It is a database of river borders across the world. By aggregating all the river borders in the world, it attempts to show how rivers have made historical bordering allies. Being able to look at all the river borders in the world also gives the viewer a sense of the sheer number of border rivers as well as their locations. However, the individual river markers are meant to remain true to the particularities of a border river because after all, all borders and all river borders are particular.The map is meant to be a teaching tool.</p>
 
