--- a/Research.html
+++ b/Research.html
@@ -148,7 +148,7 @@ body, html {
   <a href="Research.html">Research</a>
   <a href="DH.html">Digital Humanities</a>  
   <a href="CV.html">Curriculum Vitae</a>
-  <a href="Contact">Contact</a>
+   <a href="Contact.html">Contact</a>
   </div>
 
 </body>
