--- a/Home.html
+++ b/Home.html
@@ -143,7 +143,7 @@ img {vertical-align: middle;}
   <a href="Research.html">Research</a>
   <a href="DH.html">Digital Humanities</a>  
   <a href="CV.html">Curriculum Vitae</a>
-  <a href="Contact">Contact</a>
+   <a href="Contact.html">Contact</a>
   </div>
  
 </div>
