--- a/Writing.html
+++ b/Writing.html
@@ -128,7 +128,7 @@ img:hover {
   <a href="Research.html">Research</a>
   <a href="DH.html">Digital Humanities</a>  
   <a href="CV.html">Curriculum Vitae</a>
-  <a href="Contact">Contact</a>
+   <a href="Contact.html">Contact</a>
   </div>
 </body>
 </html>
